AVANZADO EN LA INTERFAZ / OBTENIENDO DATOS API

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     </header>
     <main>
         <div class="container">
-        
+            <div id="buscador">
+                <input type="text" id="buscadorInput">
+                <input type="button" class="btn btn-success" id="buscadorBoton" value="BUSCAR">
+            </div>
+            <div id="tarjetas">
+
+            </div>
         </div>    
     </main>
     <footer>
