--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <title>POKEDEX</title>
 </head>
 
 <body>
+    <!-- MODAL -->
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Modal title</h5>
+              <button type="button" class="cerrarModal close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="cerrarModal btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- FIN DEL MODAL -->
+
     <header>
         <nav>
             <div class="logo">
@@ -21,7 +44,7 @@
         <div class="container">
             <div id="buscador">
                 <input type="text" id="buscadorInput">
-                <input type="button" class="btn btn-success" id="buscadorBoton" value="BUSCAR">
+                <!-- <input type="button" class="btn btn-success" id="buscadorBoton" value="BUSCAR"> -->
             </div>
             <div id="tarjetas">
 
